examples/errors/null_unnarrowed.adr
## Using a T? value as T without narrowing — must be a compile-time null error.

fn add_one(x: Int?) returns Int:
    return x + 1

fn main():
    print(add_one(41))
